// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correcly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`Should correcly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $22,321,236.65
  </h1>
</div>
`;
